# scli

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml  docker.yml  release.yml
src/: main.rs
