[package]
name = "scli"
version = "0.2.1"
edition = "2021"
description = "Token-frugal Slack CLI for coding agents"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
ureq = { version = "2", features = ["json"] }

[profile.release]
lto = true
strip = true
